# Axion-Sat

./: .black.toml  .env.example  .gitignore  ACTION_PLAN.md  BEAT_BENCHMARK_STRATEGY.md  BENCHMARK_READY.md  BENV2_CONVERTER_GUIDE.md  COLAB_INSTRUCTIONS.md  COLAB_QUICKSTART.txt  CONVERSION_SUMMARY.md  CORRECTED_TRAINING_APPROACH.md  DISK_SPACE_RECOMMENDATIONS.md  FINAL_BENCHMARK_RESULTS.md  GAC_ARCHITECTURE_COMPLETE_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LAMBDA_WARP_INSTRUCTIONS.md  Makefile.win.ps1  PANGAEA_BENCHMARK_PLAN.md  README.md  README_models.md  REGISTRATION_SUMMARY.md  SETUP_FOR_COLAB.md  SETUP_GPU_TRAINING.md  TERRAMIND_ENHANCEMENT_STRATEGY.md  TRAINING_ISSUE_ANALYSIS.md  analyze_results.py  colab_complete_pipeline.ipynb  colab_stage1_precompute.ipynb  create_test_sar.py  download_terramind_tokenizers.py  example_stage1_usage.py  gen_alignment_qc.py  hardware.lowvr.yaml  lambda_bootstrap.sh  lambda_setup.sh  lambda_setup_and_run.sh  pip-freeze.txt  pyproject.toml  register_models.py  ruff.toml  (+29 more)
app/: download.py  geocode.py  stac_fetch.py
axs_lib/: README_DATALOADER.md  README_cloudmask.md  README_data.md  __init__.py  alignment.py  cloudmask.py  data.py  dataloader_utils.py  dem.py  disk.py  disk_README.md  geo.py  hls_neighbor_sampler.py  io.py  logging.py  losses.py  lr_scheduler.py  metadata.py  metrics.py  models.py  optim_lowvr.py  path_utils.py  reproducibility.py  spectral.py  split.py  stage1_inference.py  stage1_tim_inference.py  stage1_tm_s2o.py  stage2_losses.py  stage2_prithvi_refine.py  stage3_losses.py  stage3_tm_backbone.py  stage3_tm_crossattn.py  stage3_tm_ground.py  stdz.py  terramind_direct.py  terramind_tim.py  unified_terramind_pipeline.py  viz.py
checkpoints/stage3/: config.json
checkpoints/stage3_backbone_test/: config.json
checkpoints/stage3_baseline_test/: config.json
checkpoints/stage3_crossattn_test/: config.json
checkpoints/stage3_test/: config.json
configs/: aoi_batch.csv  aoi_batch_smoke.csv  hardware.lowvr.yaml  models.lowvram.yaml  stac.endpoints.yaml  tiling.default.yaml
configs/train/: README_STAGE3.md  stage1.lowvr.yaml  stage2.lowvr.yaml  stage3.lowvr.yaml
docs/: DATALOADER_REPRODUCIBILITY.md  GAC_COMPLETION_SUMMARY.md  GAC_FINAL_TODO.md  GAC_IMPLEMENTATION_STATUS.md  GAC_SCORE_LOGGING_COMPLETE.md  GAC_SPECIFICATION_COMPLIANCE.md  GAC_TRAINING_SPECS.md  GAC_VERIFICATION_COMPLETE.md  METADATA_README.md  STAGE3_GROUNDING.md  STAGE3_INFERENCE.md  STAGE3_TRAINING.md  STAGE3_VALIDATION.md  WINDOWS_PATH_SAFETY.md  alignment_correction_guide.md  aoi_catalog.md  arch_overview.md  cpu_fallback_feature.md  early_stopping.md  fp16_quantization.md  lr_scheduler_warmup.md  metadata_handling.md  model_licenses.md  models_hf_clone.md  panel_visualization.md  prithvi_readme.md  reproducibility.md  security.md  smoke_test_investigation.md  stage1_notes.md  stage2_benchmarking.md  stage2_inference.md  stage2_notes.md  stage2_training.md  stage3_adaptive_weighting.md  stage3_notes.md  standardization.md  storage_budget.md  validation_s2_coverage.md  windows_troubleshooting.md
examples/: checkpoint_io_example.py  cloudmask_demo.py  example_alignment_check.py  inference_fp16.py  oom_guard_example.py  reproducible_split_example.py  test_fp16_quantization.py  test_lr_scheduler.py  visualize_lr_schedule.py
logs/: batch_tiles_20251013_104958.jsonl  stage2_bench.csv
models/stage2_best_fp16/: README.md  selection_metadata.json
models/test_checkpoints/: validation_metrics.csv
models/test_export/: README.md  selection_metadata.json
models/test_fp16_export/: README.md  selection_metadata.json
models/test_fp16_real/: README.md  (+1 more)
results/: production_stage1_benchmark_20251017_005300.json  production_stage1_benchmark_20251017_005351.json  production_stage1_benchmark_20251017_005425.json  production_stage1_benchmark_20251017_005453.json  production_stage1_benchmark_20251017_005552.json
scripts/: 00_env_bootstrap.ps1  00_precompute_stage1.py  00_precompute_stage1_fast.py  01_python_env.ps1  02_gpu_smoke.ps1  03_pin_versions.py  04_disk_budget.ps1  04_disk_budget_backup.ps1  05_dev_watch.ps1  06_model_sanity.py  README_build_tiles.md  VALIDATION_INTEGRATION.md  ablate_grounding.py  batch_build_tiles.py  benchmark_stage2.py  build_tiles.py  clean_raw.ps1  compare_pretrained_vs_trained.py  compare_with_ground_truth.py  compute_ideal_metrics.py  create_comparison_table.py  debug_pipeline.py  export_stage1_best.py  export_stage2_best.py  export_stage3_best.py  final_comparison_all.py  generate_ndvi_histograms.py  get_models.ps1  get_models_hfcli.ps1  infer_full_pipeline.py  infer_stage1.py  infer_stage2.py  infer_stage3.py  ingest_benv2_streaming.py  plot_steps_curve.py  profile_stage1.py  reorganize_benv2_structure.py  summary_conversion.py  train_stage1.py  train_stage2.py  (+7 more)
stage2_checkpoints_test/: config.yaml  training_log.jsonl
stage2_verification_test/: config.yaml  training_log.jsonl
tests/: QUICKSTART_lora_tests.md  README_STAGE3_TESTS.md  README_lora_tests.md  README_test_stac.md  TEST_GUIDE.md  test_benv2_ingest_smoke.py  test_hf_hashcheck.py  test_imports.py  test_lora.py  test_losses_units.py  test_models_forward_shapes.py  test_stac_search_small.py  test_stage1_forward_real.py  test_stage2_cpu_fallback.py  test_stage2_forward_real.py  test_stage2_prithvi.py  test_stage3_forward_real.py  test_tile_schema.py
tools/: README_panel.md  color_checker.py  grad_norm_clipper.py  manifest_lint.py  oom_guard.py  panel_final_vs_v2.py  panel_v1_vs_truth.py  panel_v2_vs_v1.py  profile_step.py  sam_metric.py  size_report.py  timer_ctx.py  verify_windows_paths.py  win_path_check.py
(+54 files in other folders)
